--- a/Page Google.html
+++ b/Page Google.html
@@ -3,14 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>google</title>
-    <link rel="stylesheet" href="Page Google.css">
+    <link rel="stylesheet" href="Style.css">
     <script src="https://kit.fontawesome.com/4a485b6229.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <header>
-            <a  class="gmail" href="https://www.google.com/intl/fr/gmail/about/#">Gmail</a>
-            <a class="connexion" href="https://accounts.google.com/ServiceLogin/signinchooser?hl=fr&passive=true&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifWebSignIn&flowEntry=ServiceLogin">Connexion</a>
-    </header>
+
+    <nav>
+      <ul class="right-nav">
+        <li><a class="gmail" href="https://www.google.com/intl/fr/gmail/about/">Gmail</a></li>
+        <li><a href="https://about.google/intl/fr/products/?tab=wh"><img class="menu"src="https://thumb.ibb.co/gykLCw/grid_menu.png"alt="menu"></a></li>
+        <li><a class="signin"href="https://accounts.google.com/ServiceLogin/signinchooser?hl=fr&passive=true&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifWebSignIn&flowEntry=ServiceLogin">Connexion</a></li>
+      </ul>
+    </nav>
+
     <center> <section>
       <div class="allrecherche">
         <img src="https://www.google.tn/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="" title="Google"><br>
@@ -22,7 +28,7 @@
                 </div>
               </tr>
               <tr>
-                <input class="box0" maxlength="2048" name="q" type="text" jsaction="paste:puy29d" aria-autocomplete="both" aria-haspopup="false" autocapitalize="off" autocomplete="off" autocorrect="off" autofocus="" role="combobox" spellcheck="false" title="Rechercher" value="" aria-label="Rech." >
+                <input class="cadre_de_recherche" maxlength="2048" name="q" type="text" jsaction="paste:puy29d" aria-autocomplete="both" aria-haspopup="false" autocapitalize="off" autocomplete="off" autocorrect="off" autofocus="" role="combobox" spellcheck="false" title="Rechercher" value="" aria-label="Rech." >
               </tr>
               <tr>
                 <div class="micro">
@@ -32,29 +38,38 @@
             </div>
           </table>
         </div> <br>
-        <div class="box">
-          <input class="" value="Recherche Google" aria-label="Recherche Google" type="submit">
+        <div class="recherche_Google_et_J_ai_de_la_chance">
+          <input class="recherche_Google" value="Recherche Google" aria-label="Recherche Google" type="submit">
           <a href="https://www.google.com/doodles">
-            <input class="" value="J'ai de la chance" aria-label="J'ai de la chance" type="submit">
+            <input class="J_ai_de_la_chance" value="J'ai de la chance" aria-label="J'ai de la chance" type="submit">
           <a/>
         </div>
       </div>
+      <div class="langue">
+        <ul>
+        <li>Google disponible en : </li>
+        <li class="arabic"><a href="#">العربية</a></li>
+        </ul>
+      </div>
     </section> </center>
+
     <footer>
-      <div class="">
-        <div id="tunisie">Tunisie</div>
-        <hr width="1px">
-        <table>
-          <tr>
-            <td>
-              <div id="moreinfo"><a href="https://www.google.tn/intl/fr_tn/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicité</a></div>
-            </td>
-            <td>
-              <div id="moreinfo"><a href="https://www.google.tn/intl/fr_tn/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicité</a></div>
-            </td>
-          </tr>
-        </table>
-        </div>
+      <ul class="Tunisie">
+        Tunisie
+      </ul>
+      <hr>
+      <ul class="footerleft">
+        <li><a href="https://www.google.tn/intl/fr_tn/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicité</a></li>
+        <li><a href="https://www.google.tn/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Entreprise</a></li>
+        <li><a href="https://about.google/?utm_source=google-TN&utm_medium=referral&utm_campaign=hp-footer&fg=1">A propos</a></li>
+        <li><a href="https://google.com/search/howsearchworks/?fg=1">Comment fonctionne la recherche Google?</a></li>
+      </ul>
+      <ul class="footerright">
+        <li><a href="https://policies.google.com/privacy?fg=1">Confidentialité</a></li>
+        <li><a href="https://policies.google.com/terms?fg=1">Conditions</a></li>
+        <li><a href="https://www.google.tn/preferences?hl=fr">Parametres</a></li>
+      </ul>
     </footer>
+
   </body>
 </html>
